--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "apollo-server-express": "^2.21.1",
     "apollo-server-micro": "^2.21.1",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "twit": "^2.2.11",
     "twitter-lite": "^1.1.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0"
   }
 }
